MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/DirectDebit_Registration_Response__c.object-meta.xml
<CustomObject>
    <label>DirectDebit_Registration_Response</label>
    <nameField>
        <displayFormat>DDRS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DirectDebit_Registration_Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>