MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Accept_Reject__c.field-meta.xml
<CustomField>
    <fullName>Accept_Reject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accept/Reject</label>
    <length>150</length>
    <type>Text</type>
</CustomField>