MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>