MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>