MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action</label>
    <length>250</length>
    <type>Text</type>
</CustomField>