MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>