MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/CancellationAckStatus__c.field-meta.xml
<CustomField>
    <fullName>CancellationAckStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CancellationAckStatus</label>
    <length>150</length>
    <type>Text</type>
</CustomField>