MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmation Date</label>
    <type>Date</type>
</CustomField>