MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Currency Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>