MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/DDA_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>DDA_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DDA Expiry Date</label>
    <type>Date</type>
</CustomField>