MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/DDA_Reference__c.field-meta.xml
<CustomField>
    <fullName>DDA_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DDA Reference</label>
    <length>250</length>
    <type>Text</type>
</CustomField>