MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/DirectDebit_Transactions__c.field-meta.xml
<CustomField>
    <fullName>DirectDebit_Transactions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DirectDebit_Transactions</label>
    <referenceTo>DirectDebit_Transactions__c</referenceTo>
    <relationshipLabel>DirectDebit_Registration_Response</relationshipLabel>
    <relationshipName>DirectDebit_Registration_Response</relationshipName>
    <type>Lookup</type>
</CustomField>