MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>