MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expires On</label>
    <length>150</length>
    <type>Text</type>
</CustomField>