MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Failure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>