MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/First_Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Initiation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Initiation Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>