MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Frequency_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Parameter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequency Parameter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>