MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IBAN</label>
    <length>150</length>
    <type>Text</type>
</CustomField>