MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Image_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Image_File_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Image File Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>