MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Issued_For__c.field-meta.xml
<CustomField>
    <fullName>Issued_For__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issued For</label>
    <length>200</length>
    <type>Text</type>
</CustomField>