MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Maker_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Maker_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Maker Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>