MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Maximum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Amount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Maximum Amount</label>
    <length>150</length>
    <type>Text</type>
</CustomField>