MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Minimum Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>