MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Payer_Identification__c.field-meta.xml
<CustomField>
    <fullName>Payer_Identification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payer Identification</label>
    <length>150</length>
    <type>Text</type>
</CustomField>