MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Frequency</label>
    <length>150</length>
    <type>Text</type>
</CustomField>