MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/RCMS__c.field-meta.xml
<CustomField>
    <fullName>RCMS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RCMS</label>
    <length>150</length>
    <type>Text</type>
</CustomField>