MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>