MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/RegACKStatus__c.field-meta.xml
<CustomField>
    <fullName>RegACKStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RegACKStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>