MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>150</length>
    <type>Text</type>
</CustomField>