MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ack</fullName>
            </value>
            <value>
                <fullName>Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>