MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Registration_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payer_Identification__c</columns>
    <columns>DDA_Reference__c</columns>
    <columns>Account_Name__c</columns>
    <columns>OIC__c</columns>
    <columns>Status__c</columns>
    <columns>DirectDebit_Transactions__c</columns>
    <columns>Failure_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_Type__c</columns>
    <columns>RegACKStatus__c</columns>
    <columns>RegResStatus__c</columns>
    <columns>RegVIdStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>